<?xml version="1.0" encoding="utf-8"?>
<!--   
  Copyright (C) 2013 The OmniROM Project
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <PreferenceCategory
        android:key="settings">

            <CheckBoxPreference
                android:key="bright"
                android:title="@string/setting_bright"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="strobe"
                android:title="@string/setting_strobe"
                android:defaultValue="false" />    

            <org.omnirom.torch.StrobeFreqPreference
                android:key="strobe_freq"
                android:title="@string/setting_frequency_title" />

            <CheckBoxPreference
                android:key="sos"
                android:title="@string/setting_sos"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="fullscreen"
                android:title="@string/setting_fullscreen"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="keep_screen_on"
                android:title="@string/setting_keep_screen_on"
                android:defaultValue="false" />
                    
    </PreferenceCategory>

</PreferenceScreen>  
